# libsdlang

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  fips.yml  meson.build  sdlang  sdlang.c  sdlang.h  sdlang.inl  sdlang.rl  sdlang.sh
samples/: parser.c  parser.sdl
